--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 script:
 - git clone https://github.com/livenet123/Newton.git cryptonote
 - mkdir build && cd build
-- cmake -DCMAKE_BUILD_TYPE=Release && make
+- cmake -DCMAKE_BUILD_TYPE=Release .. && make
 before_deploy:
 - mkdir NewtonWallet-${TRAVIS_TAG}
 - mv NewtonWallet NewtonWallet-${TRAVIS_TAG}/
@@ -38,7 +38,7 @@ before_deploy:
 deploy:
   provider: releases
   api_key:
-    secure: 
+    secure:
   file:
     - NewtonWallet-${TRAVIS_TAG}-${TRAVIS_OS_NAME}.tar.gz
   skip_cleanup: true
