--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,20 @@ matrix:
     addons:
       apt:
         sources:
+        - sourceline: 'ppa:mhier/libboost-latest'
         - ubuntu-toolchain-r-test
         packages:
         - g++-4.9
-        - libboost1.58-all-dev
+        - boost1.67
         - qtbase5-dev
     env:
     - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
   - os: osx
 before_install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository ppa:kzemek/boost
-  -y    ; fi
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -q                            ;
-  fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update
+  ; fi
 install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install libboost1.58-all-dev qtbase5-dev
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install libboost qtbase5-dev
   -y            ; fi
 script:
 - git clone https://github.com/livenet123/Newton.git cryptonote
