--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,24 @@ matrix:
     addons:
       apt:
         sources:
-        - sourceline: 'ppa:kzemek/boost'
         - ubuntu-toolchain-r-test
         packages:
         - g++-4.9
-        - boost1.58
         - qtbase5-dev
+        - libboost-all-dev
     env:
     - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
   - os: osx
-before_install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update
+  before_install:
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository ppa:ethcore/ethcore
+  -y    ; fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -q
   ; fi
 install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install libboost1.58-dev qtbase5-dev
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install librocksdb-dev
   -y            ; fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install qtbase5-dev
+ -y  ; else brew install qt5     ; fi
 script:
 - git clone https://github.com/livenet123/Newton.git cryptonote
 - mkdir build && cd build
