--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,14 @@ matrix:
     - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
   - os: osx
   before_install:
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]] then
+-  sudo apt purge cmake
+-  sudo apt autoremove
+-  wget https://cmake.org/files/v3.11/cmake-3.11.4-Linux-x86_64.sh
+-  sudo mkdir /opt/cmake
+-  sudo sh cmake-3.11.4-Linux-x86_64.sh --prefix=/opt/cmake --skip-license
+-  sudo update-alternatives --install /usr/bin/cmake cmake /opt/cmake/bin/cmake 1 --force
+  ; if
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository ppa:ethcore/ethcore
   -y    ; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -q
