--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,9 +2,8 @@ os: Visual Studio 2017
 
 environment:
     BOOST_ROOT: C:\Libraries\boost_1_66_0
-    QTDIR : C:\Qt\5.9.5\msvc2017_64
+    QT5: C:\Qt\5.9.5\msvc2017_64
     BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib64-msvc-14.1
-
 build_script:
     - git clone https://github.com/livenet123/Newton.git cryptonote
     - md build && cd build
