--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,13 +1,15 @@
 os: Visual Studio 2017
 
 environment:
-    BOOST_ROOT: C:\Libraries\boost_1_66_0
-    BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib64-msvc-14.1
-    QT5: C:\Qt\5.9.5\msvc2017_64
-init:
-  - set PATH=%PATH%;%QT5%\bin;%QT5%\lib\cmake\Qt5GUI;%BOOST_ROOT%,%BOOST_LIBRARYDIR%
+    BOOST_ROOT: 'C:\Libraries\boost_1_66_0'
+    BOOST_LIBRARYDIR: 'C:\Libraries\boost_1_66_0\lib64-msvc-14.1'
+    QTDIR: 'C:\Qt\5.10.1\msvc2017_64'
+    PATH: '%PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%'
 build_script:
-    - git clone https://github.com/livenet123/Newton.git cryptonote
-    - md build && cd build
-    - cmake -G "Visual Studio 15 Win64" .. -DCMAKE_BUILD_TYPE=Release
-    - MSBuild NewtonWallet.sln /p:Configuration=Release /m
+   - echo %QTDIR%
+   - echo %BOOST_ROOT%
+   - echo %BOOST_LIBRARYDIR%
+   - git clone https://github.com/livenet123/Newton.git cryptonote
+   - md build && cd build
+   - cmake -G "Visual Studio 15 Win64" .. -DCMAKE_PREFIX_PATH=%QTDIR%;%BOOST_ROOT% -DCMAKE_BUILD_TYPE=Release -DBOOST_ROOT:STRING=%BOOST_ROOT% -DBOOST_LIBRARYDIR:STRING=%BOOST_LIBRARYDIR%
+   - MSBuild NewtonWallet.sln /p:Configuration=Release /m
