--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,15 +1,13 @@
-os: Visual Studio 2017
+os: Visual Studio 2015
 
 environment:
-    BOOST_ROOT: 'C:\Libraries\boost_1_67_0'
-    BOOST_LIBRARYDIR: 'C:\Libraries\boost_1_67_0\lib64-msvc-14.1'
+    BOOST_ROOT: 'C:\Libraries\boost_1_60_0'
     QTDIR: 'C:\Qt\5.10.1\msvc2017_64'
     PATH: '%PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%'
 build_script:
    - echo %QTDIR%
    - echo %BOOST_ROOT%
-   - echo %BOOST_LIBRARYDIR%
    - git clone https://github.com/livenet123/Newton.git cryptonote
    - md build && cd build
-   - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/" -DBOOST_ROOT="C:/Libraries/boost_1_67_0" -DBOOST_LIBRARYDIR="C:/Libraries/boost_1_67_0/lib64-msvc-14.1" ..
+   - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/" -DBOOST_ROOT="C:/Libraries/boost_1_60_0" ..
    - MSBuild NewtonWallet.sln /p:Configuration=Release /m
