--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,5 +9,5 @@ build_script:
    - echo %BOOST_ROOT%
    - git clone https://github.com/livenet123/Newton.git cryptonote
    - md build && cd build
-   - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/" -DBOOST_ROOT="C:/Libraries/boost_1_60_0" ..
+   - cmake -G "Visual Studio 14 Win64" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/" -DBOOST_ROOT="C:/Libraries/boost_1_60_0" ..
    - MSBuild NewtonWallet.sln /p:Configuration=Release /m
