--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,8 +2,8 @@ os: Visual Studio 2015
 
 environment:
     BOOST_ROOT: 'C:\Libraries\boost_1_60_0'
-    QTDIR: 'C:\Qt\5.10.1\msvc2017_64'
-    PATH: '%PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%'
+    QTDIR: 'C:\Qt\5.10.1\msvc2015_64'
+    PATH: '%PATH%;%QTDIR%\bin'
 build_script:
    - echo %QTDIR%
    - echo %BOOST_ROOT%
