--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 os: Visual Studio 2015
 
 environment:
-    BOOST_ROOT: 'C:\Libraries\boost_1_60_0'
+    BOOST_ROOT: 'C:\Libraries\boost_1_58_0'
     QTDIR: 'C:\Qt\5.10.1\msvc2015_64'
     PATH: '%PATH%;%QTDIR%\bin'
 build_script:
@@ -9,5 +9,5 @@ build_script:
    - echo %BOOST_ROOT%
    - git clone https://github.com/livenet123/Newton.git cryptonote
    - md build && cd build
-   - cmake -G "Visual Studio 14 Win64" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/" -DBOOST_ROOT="C:/Libraries/boost_1_60_0" ..
+   - cmake -G "Visual Studio 14 Win64" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/" -DBOOST_ROOT="C:\Libraries\boost_1_58_0" ..
    - MSBuild NewtonWallet.sln /p:Configuration=Release /m
