--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,17 +1,15 @@
 os: Visual Studio 2017
 
 environment:
-    BOOST_ROOT: 'C:\Libraries\boost_1_66_0'
-    BOOST_LIBRARYDIR: 'C:\Libraries\boost_1_66_0\lib64-msvc-14.1'
-    BOOST_INCLUDEDIR: 'C:\Libraries\boost_1_66_0\boost'
-    QTDIR: 'C:\Qt\5.10.1\msvc2017_64'
-    PATH: '%PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%'
+    BOOST_ROOT: C:\Libraries\boost_1_66_0
+    BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib64-msvc-14.1
+    QTDIR: C:\Qt\5.10.1\msvc2017_64
+    PATH: %PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%
 build_script:
    - echo %QTDIR%
    - echo %BOOST_ROOT%
    - echo %BOOST_LIBRARYDIR%
-   - echo %BOOST_INCLUDEDIR%
    - git clone https://github.com/livenet123/Newton.git cryptonote
    - md build && cd build
-   - cmake -G "Visual Studio 15 Win64" -DBOOST_ROOT='C:\Libraries\boost_1_66_0' -DBOOST_INCLUDEDIR='C:\Libraries\boost_1_66_0\boost' -DBOOST_LIBRARYDIR='C:\Libraries\boost_1_66_0\lib64-msvc-14.1' -DCMAKE_BUILD_TYPE=Release  ..
+   - cmake -G "Visual Studio 15 Win64" -DCMAKE_BUILD_TYPE=Release  ..
    - MSBuild NewtonWallet.sln /p:Configuration=Release /m
