--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ environment:
     BOOST_ROOT: C:\Libraries\boost_1_66_0
     BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib64-msvc-14.1
     QTDIR: C:\Qt\5.10.1\msvc2017_64
-    PATH: %PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%
+    PATH: '%PATH%;%QTDIR%\bin;%BOOST_LIBRARYDIR%'
 build_script:
    - echo %QTDIR%
    - echo %BOOST_ROOT%
