--- a/.travis.yml
+++ b/.travis.yml
@@ -46,22 +46,16 @@ install:
 # Need to uninstall oclint to get newer gcc installed https://github.com/travis-ci/travis-ci/issues/8826
 - if [[ "${LABEL:0:3}" == "osx" ]]; then brew cask uninstall --force oclint || true ; fi
 
-- if [[ "$LABEL" == "osx" ]]; then brew install gcc@4.9 ; fi
-- if [[ "$LABEL" == "osx" ]]; then
-      brew update;
-      brew ls | grep -wq qt5 || brew install qt5;
-      echo "Adding brewed Qt5 to path";
-      export PATH=/usr/local/opt/qt5/bin:$PATH;
-      qmake -v;
-    fi
-- if [[ "$LABEL" == "linux" ]]; then sudo apt-get install qtbase5-dev
+- if [[ "$LABEL" == "osx-g++-4.9" ]]; then brew install gcc@4.9 ; fi
+- if [ $TRAVIS_OS_NAME = osx ]; then brew install qt@5.11 ; fi
+- if [ $TRAVIS_OS_NAME = linux ] then sudo apt-get install qtbase5-dev
   -y  ; fi
 
 script:
 - eval $MATRIX_EVAL
 - git clone https://github.com/livenet123/Newton.git cryptonote
 - mkdir build && cd build
-- cmake -DCMAKE_BUILD_TYPE=Release .. && make
+- cmake -DCMAKE_BUILD_TYPE=Release -DQt5_DIR=$(brew --prefix qt)/lib/cmake/Qt5  .. && make
 
 before_deploy:
 - mkdir NewtonWallet-${TRAVIS_TAG}
