--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: true
 language: cpp
 compiler: gcc 
-
+ env:	 
+ - CXXFLAGS="-std=gnu++11"
 matrix:
   include:
   
@@ -17,7 +18,6 @@ matrix:
         - gcc-4.9
   env:
     - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
-    - LABEL="ubuntu-gcc4.9" 
     
    # osx clang   
  - os: osx  
@@ -31,7 +31,6 @@ matrix:
       update: true
     env:
     - MATRIX_EVAL="CC=clang && CXX=clang++"
-    - LABEL="osx-clang"
     
   before_install:
     - eval $MATRIX_EVAL
@@ -43,6 +42,10 @@ matrix:
       qmake -v;
       fi
     - if [ $TRAVIS_OS_NAME = osx ];  then
+      brew link --force qt5
+      sudo ln -s /usr/local/Cellar/qt/5.11.0/mkspecs /usr/local/mkspecs
+      sudo ln -s /usr/local/Cellar/qt/5.11.0/plugins /usr/local/plugins
+      sudo ls /usr/local/opt/qt5/lib/cmake/Qt5Widgets/Qt5WidgetsConfig.cmake
       echo "Adding brewed Qt5 to path";
       export PATH=/usr/local/opt/qt5/bin:$PATH;
       export PATH=/usr/local/Cellar/qt5/5.11.0/:$PATH;
