--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,68 @@
 sudo: true
 language: cpp
-compiler: gcc 
- env:	 
- - CXXFLAGS="-std=gnu++11"
+compiler: gcc
+env:
+- CXXFLAGS="-std=gnu++11"
 matrix:
   include:
   
-  # ubuntu gcc
-- os: linux
-  addons:
-    apt:
-     sources:
+  # Ubuntu, g++-4.9
+  - os: linux
+    addons:
+      apt:
+        sources:
         - ubuntu-toolchain-r-test
-     packages:        
+        packages:        
         - libboost1.55-all-dev
         - g++-4.9
         - gcc-4.9
-  env:
-    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+    env:
+    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
+    - LABEL="linux-g++-4.9"
+    - STRIP="strip"
     
-   # osx clang   
- - os: osx  
-   osx_image: xcode10
-   compiler: clang
+  # OSX, g++-4.9
+  - os: osx
+    osx_image: xcode10
+    compiler: gcc
     addons:
-      homebrew:
-        packages:
-          - boost
-          - qt5
-      update: true
+     homebrew:
+      packages:
+       - boost
+       - qt5
+    update: true
+    env:
+    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
+    - LABEL="osx-g++-4.9"
+    - STRIP="strip"  
+    
+  # OSX, clang
+  - os: osx
+    osx_image: xcode10
+    compiler: clang
+    addons:
+     homebrew:
+      packages:
+       - boost
+       - qt5
+    update: true
     env:
     - MATRIX_EVAL="CC=clang && CXX=clang++"
+    - LABEL="osx-clang"
+    - STRIP="strip"
     
   before_install:
     - eval $MATRIX_EVAL
-    - if [ $TRAVIS_OS_NAME = linux ];  then
-      sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-      sudo apt-get update -qq
-      sudo apt-get install qtbase5-dev qtdeclarative5-dev
-      sudo apt-get install qt5-default qttools5-dev-tools
-      qmake -v;
-      fi
-    - if [ $TRAVIS_OS_NAME = osx ];  then
-      brew link --force qt5
-      sudo ln -s /usr/local/Cellar/qt/5.11.0/mkspecs /usr/local/mkspecs
-      sudo ln -s /usr/local/Cellar/qt/5.11.0/plugins /usr/local/plugins
-      sudo ls /usr/local/opt/qt5/lib/cmake/Qt5Widgets/Qt5WidgetsConfig.cmake
-      echo "Adding brewed Qt5 to path";
-      export PATH=/usr/local/opt/qt5/bin:$PATH;
-      export PATH=/usr/local/Cellar/qt5/5.11.0/:$PATH;
-      qmake -v;
-      fi
+    - if [ $TRAVIS_OS_NAME = linux ]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa ; fi 
+    - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get update -qq ; fi
+    - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install qtbase5-dev qtdeclarative5-dev ; fi
+    - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install qt5-default qttools5-dev-tools ; fi
+    - if [ $TRAVIS_OS_NAME = osx ]; then brew link --force qt5 ; fi     
+    - if [ $TRAVIS_OS_NAME = osx ]; then sudo ln -s /usr/local/Cellar/qt/5.11.0/mkspecs /usr/local/mkspecs ; fi 
+    - if [ $TRAVIS_OS_NAME = osx ]; then sudo ln -s /usr/local/Cellar/qt/5.11.0/plugins /usr/local/plugins ; fi 
+    - if [ $TRAVIS_OS_NAME = osx ]; then sudo ls /usr/local/opt/qt5/lib/cmake/Qt5Widgets/Qt5WidgetsConfig.cmake ; fi 
+    - if [ $TRAVIS_OS_NAME = osx ]; then export PATH=/usr/local/opt/qt5/bin:$PATH ; fi 
+    - if [ $TRAVIS_OS_NAME = osx ]; then export PATH=/usr/local/Cellar/qt5/5.11.0/:$PATH ; fi 
            
 script:
 - eval $MATRIX_EVAL
