--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 sudo: true
 language: cpp
-compiler: gcc
-env:
-- CXXFLAGS="-std=gnu++11"
+
 matrix:
   include:
   
@@ -17,9 +15,8 @@ matrix:
         - g++-4.9
         - gcc-4.9
     env:
-    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
+    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
     - LABEL="linux-g++-4.9"
-    - STRIP="strip"
     
   # OSX, g++-4.9
   - os: osx
@@ -32,9 +29,8 @@ matrix:
        - qt5
     update: true
     env:
-    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9
-    - LABEL="osx-g++-4.9"
-    - STRIP="strip"  
+    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+    - LABEL="osx-g++-4.9"  
     
   # OSX, clang
   - os: osx
@@ -49,7 +45,6 @@ matrix:
     env:
     - MATRIX_EVAL="CC=clang && CXX=clang++"
     - LABEL="osx-clang"
-    - STRIP="strip"
     
   before_install:
     - eval $MATRIX_EVAL
