--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
     env:
     - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     - LABEL="linux-g++-7"
+    - Deploy ="true"
     
   # OSX, g++-7
   - os: osx
@@ -27,7 +28,6 @@ matrix:
       packages:
        - boost
        - qt5
-    update: true
     env:
     - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     - LABEL="osx-g++-7"  
@@ -41,10 +41,10 @@ matrix:
       packages:
        - boost
        - qt5
-    update: true
     env:
     - MATRIX_EVAL="CC=clang && CXX=clang++"
     - LABEL="osx-clang"
+    - Deploy ="true"
     
   before_install:
     - eval $MATRIX_EVAL
@@ -54,12 +54,8 @@ matrix:
     - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install qt5-default qttools5-dev-tools ; fi
     - if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall --force oclint || true ; fi
     - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc@7 ; fi
-    - if [ $TRAVIS_OS_NAME = osx ]; then brew link --force qt5 ; fi 
-    - if [ $TRAVIS_OS_NAME = osx ]; then sudo ln -s /usr/local/Cellar/qt/5.11.1/mkspecs /usr/local/mkspecs ; fi 
-    - if [ $TRAVIS_OS_NAME = osx ]; then sudo ln -s /usr/local/Cellar/qt/5.11.1/plugins /usr/local/plugins ; fi 
-    - if [ $TRAVIS_OS_NAME = osx ]; then sudo ls /usr/local/opt/qt5/lib/cmake/Qt5Widgets/Qt5WidgetsConfig.cmake ; fi 
-    - if [ $TRAVIS_OS_NAME = osx ]; then export PATH=/usr/local/opt/qt5/bin:$PATH ; fi 
-    - if [ $TRAVIS_OS_NAME = osx ]; then export PATH=/usr/local/Cellar/qt5/5.11.1/:$PATH ; fi 
+    - if [ $TRAVIS_OS_NAME = osx ]; then export PATH=/usr/local/opt/qt5/bin:$PATH ; fi
+    - if [ $TRAVIS_OS_NAME = osx ]; then export PATH=/usr/local/opt/qt5/lib:$PATH ; fi 
            
 script:
 - eval $MATRIX_EVAL
@@ -83,3 +79,4 @@ deploy:
   on:
     repo: livenet123/NewtonWallet
     tags: true
+    condition: "$DEPLOY = true"
