--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,12 +1,31 @@
-os: Visual Studio 2017
+version: 1.0.{build}
+
+image: Visual Studio 2017
 
 environment:
-    BOOST_ROOT: C:\Libraries\boost_1_66_0
-    BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib64-msvc-14.1
-    QTDIR: C:\Qt\5.10.1\msvc2017_64
-    PATH: '%PATH%;%QTDIR%\bin;%BOOST_ROOT%;%BOOST_LIBRARYDIR%'
+ matrix:
+    - PLATFORM: x64
+      configuration: Release
+      BUILDER: CMake
+      GENERATOR: "Visual Studio 15 2017 Win64"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      BOOST_ROOT: C:\Libraries\boost_1_66_0
+      BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib64-msvc-14.1
+      QTDIR: C:\Qt\5.10.1\msvc2017_64
+      PATH: '%PATH%;%QTDIR%\bin;%BOOST_ROOT%;%BOOST_LIBRARYDIR%'
+    - PLATFORM: x86
+      configuration: Release
+      BUILDER: CMake
+      GENERATOR: "Visual Studio 15 2017"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      BOOST_ROOT: C:\Libraries\boost_1_66_0
+      BOOST_LIBRARYDIR: C:\Libraries\boost_1_66_0\lib32-msvc-14.1
+      QTDIR: C:\Qt\5.10.1\msvc2017
+      PATH: '%PATH%;%QTDIR%\bin;%BOOST_ROOT%;%BOOST_LIBRARYDIR%'
+
 build_script:
    - git clone https://github.com/livenet123/Newton.git cryptonote
    - md build && cd build
-   - cmake -G "Visual Studio 15 Win64" -DBOOST_ROOT="C:\Libraries\boost_1_66_0" -DCMAKE_BUILD_TYPE=Release  ..
-   - MSBuild NewtonWallet.sln /p:Configuration=Release /m
+   - ps: 'Write-Host "Running $env:BUILDER with $env:GENERATOR" $env:PLATFORM -ForegroundColor Magenta'
+   - if "%BUILDER%"=="CMake" cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% ..
+   - MSBuild NewtonWallet.sln /m
