--- a/.travis.yml
+++ b/.travis.yml
@@ -39,14 +39,16 @@ matrix:
   before_install:
     - eval $MATRIX_EVAL
     - if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall --force oclint || true ; fi
+    - if [ $TRAVIS_OS_NAME = linux ]; then set BOOST_ROOT = /usr/include/boost ; fi
+    - if [ $TRAVIS_OS_NAME = linux ]; then set BOOST_LIBRARYDIR = /usr/lib/x86_64-linux-gnu ; fi
     - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc@7 ; fi
-           
+
 script:
 - eval $MATRIX_EVAL
 - git clone https://github.com/livenet123/Newton.git cryptonote
 - mkdir build && cd build
 - export CMAKE_PREFIX_PATH=/usr/local/opt/qt5/
-- cmake -DCMAKE_BUILD_TYPE=Release .. && make
+- cmake -DCMAKE_BUILD_TYPE=Release ${BOOST_ROOT} ${BOOST_LIBRARYDIR} .. && make
 
 before_deploy:
 - mkdir NewtonWallet-${TRAVIS_TAG}
