--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ matrix:
   before_install:
     - eval $MATRIX_EVAL
     - if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall --force oclint || true ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then set BOOST_ROOT = /usr/include/boost ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then set BOOST_LIBRARYDIR = /usr/lib/x86_64-linux-gnu ; fi
+    - if [ $TRAVIS_OS_NAME = linux ]; then export BOOST_ROOT = "-DBOOST_ROOT=`/usr/include/boost`" ; fi 
+    - if [ $TRAVIS_OS_NAME = linux ]; then export BOOST_LIBRARYDIR = "-DBOOST_LIBRARYDIR='/usr/lib/x86_64-linux-gnu'" ; fi
     - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc@7 ; fi
 
 script:
