--- a/.travis.yml
+++ b/.travis.yml
@@ -38,16 +38,13 @@ matrix:
     
   before_install:
     - eval $MATRIX_EVAL
+    # manually install latest cmake
+    - |
+    travis_retry wget \
+      -q https://cmake.org/files/v3.11/cmake-3.11.1-Linux-x86_64.sh
+    sh cmake-3.11.1-Linux-x86_64.sh --skip-license
     
   install:
-    - if [ $TRAVIS_OS_NAME = linux ]; then wget http://www.cmake.org/files/v3.12/cmake-3.12.1.tar.gz ;fi 
-    - if [ $TRAVIS_OS_NAME = linux ]; then tar -xvzf cmake-3.12.1.tar.gz ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then cd cmake-3.12.1 ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then ./configure ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then make ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then sudo make install ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then sudo update-alternatives --install /usr/bin/cmake cmake /usr/local/bin/cmake 1 --force ; fi
-    - if [ $TRAVIS_OS_NAME = linux ]; then cmake --version ; fi
     - if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall --force oclint || true ; fi
     - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc@7 ; fi
 
