--- a/.travis.yml
+++ b/.travis.yml
@@ -36,14 +36,14 @@ matrix:
     - LABEL="osx-clang"
     - Deploy ="true"
     
-  before_install:
-    - eval $MATRIX_EVAL
-    - if [ $TRAVIS_OS_NAME = linux ]; then wget -q https://cmake.org/files/v3.11/cmake-3.11.1-Linux-x86_64.sh ; fi     
-    - if [ $TRAVIS_OS_NAME = linux ]; sh cmake-3.11.1-Linux-x86_64.sh --skip-license ; fi 
-    
-  install:
-    - if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall --force oclint || true ; fi
-    - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc@7 ; fi
+before_install:
+- eval $MATRIX_EVAL
+
+install:
+- if [ $TRAVIS_OS_NAME = linux ]; then wget -q https://cmake.org/files/v3.11/cmake-3.11.1-Linux-x86_64.sh ; fi     
+- if [ $TRAVIS_OS_NAME = linux ]; then sh cmake-3.11.1-Linux-x86_64.sh --skip-license ; fi 
+- if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall --force oclint || true ; fi
+- if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc@7 ; fi
 
 script:
 - eval $MATRIX_EVAL
